dev/non_executable_reasons_record_from_random_10k/9546.txt
3.6
An error occurred while executing the following cell:
------------------
In Jupyter notebook, select the tab with the contents list of the interactive textbook:
    
Open __Seminar 3__  by clicking on __3_Data_Structures__.
------------------

[0;36m  File [0;32m"<ipython-input-2-4d78541a6b3c>"[0;36m, line [0;32m1[0m
[0;31m    In Jupyter notebook, select the tab with the contents list of the interactive textbook:[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-4d78541a6b3c>, line 1)

Executability                            : False
